--- a/views/register.html
+++ b/views/register.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registration</title>
+  <title>register</title>
   <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Register</h1>
     <form action="/register" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" minlength="1" maxlength="50" required>
+      <label for="email">email</label>
+      <input type="email" id="email" name="email" minlength="6" maxlength="256" required>
       <br><br>
       
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" minlength="1" maxlength="256" required>
+      <label for="password">password</label>
+      <input type="password" id="password" name="password" minlength="8" maxlength="256" required>
       <br><br>
       
-      <label for="birthdate">Birthdate:</label>
+      <label for="birthdate">birthdate</label>
       <input type="date" id="birthdate" name="birthdate" required>
       <br><br>
       
-      <label for="role">Role:</label>
+      <label for="role">role</label>
       <select id="role" name="role">
-        <option value="reserver">Reserver</option>
-        <option value="administrator">Administrator</option>
+        <option value="reserver">reserver</option>
+        <option value="administrator">administrator</option>
       </select>
       <br><br>
       
-      <button type="submit">Register</button>
+      <button type="submit">register</button>
     </form>
   </div>
 </body>
